# voidwalkers

./: Cargo.toml  README.md
assets/models/: antique_table.glb  floor-lamp.glb  floor_lamp.glb  lamp.glb  light_switch.glb  muzzle-flash.glb  muzzle-flash2.glb  sofa.glb  victorian_lounge_sofa.glb  wall_light.glb  white_present.glb  wood_slab_coffee_table.glb  wood_window.glb  wooden_door.glb  wooden_floor.glb  wooden_window.glb
assets/scenes/: load_scene_example-new.scn.ron  load_scene_example.scn.ron
assets/shaders/: muzzle_flash.wgsl  skybox.wgsl
src/: lib.rs  main.rs
src/common/: commands.rs  entities.rs  link_animations.rs  mod.rs  states.rs
src/components/: floor.rs  mod.rs  player.rs  projectile.rs
src/cubes/: components.rs
src/cubes/systems/: spawn.rs
src/effects/: blood_decal.rs  bullet_hole.rs  components.rs  mod.rs  muzzle_flash.rs
src/enemies/: mod.rs
src/enemies/cat/: animations.rs  (+3 more)
src/environment/: setup.rs
src/game/: blood.rs  blood_state.rs  link_animations.rs  mod.rs  state.rs
src/house/: components.rs
src/player/: components.rs  constants.rs  mod.rs  resources.rs
src/plugins/: floor_plugin.rs  game_state_plugin.rs  mod.rs  player_plugin.rs  window_setup_plugin.rs
src/resources/: mod.rs  projectile_properties.rs
src/states/: game_state.rs  mod.rs  systems.rs
src/systems/: camera_system.rs  cube_system.rs  floor_system.rs  game_state_system.rs  mod.rs  player_system.rs  shooting_system.rs
src/ui/: fps.rs  mod.rs  position.rs
src/weapons/: components.rs  mod.rs  resources.rs  states.rs
src/window/: cursor.rs  mod.rs
(+70 files in other folders)
