[package]
name = "voidhunt"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", features = ["jpeg", "png"] }
bevy_kira_audio = "0.19"
bevy_rapier3d = "0.25"
bevy_hanabi = { version = "0.11", default-features = false, features = [ "3d" ] }
rand = "0.8.5"
bevy_atmosphere = "0.9"
